switch landing page

--- a/game/static/css/base.css
+++ b/game/static/css/base.css
@@ -178,7 +178,7 @@ footer {
     flex-direction: column;
 }
 
-/* compatiblity */
+/* compatibility */
 .compatibility-table {
     width: 80%;
     margin: 0 auto;
